--- a/public/css/location.css
+++ b/public/css/location.css
@@ -1,7 +1,3 @@
 .col-md-8, .col-md-4{
 	text-align: left;
 }
-
-.col-md-8{
-	border-left: 1px dotted #000;
-}
