--- a/public/css/people.css
+++ b/public/css/people.css
@@ -18,7 +18,3 @@
 	border-bottom: 1px solid #000;
 	text-align: left;
 }
-
-.col-md-8{
-	border-left: 1px dotted #000;
-}
