--- a/public/css/side-navigation.css
+++ b/public/css/side-navigation.css
@@ -1,6 +1,7 @@
 .col-md-4{
 	text-align: left;
-	padding: 0 20px;
+	padding: 0 5px 15px 20px;
+	border-right: 1px dotted #000;
 }
 
 .quick-links{
@@ -12,10 +13,15 @@
 	list-style-type: none;
 }
 
+.quick-links a, .general-info a{
+	color: #393939;
+}
+
 .quick-links h2, .general-info h2{
 	font-size: 16px;
 	border-bottom: 1px dotted #000;
 	width: 100%;
+	margin-top: 16px;
 }
 
 .general-info {
